@@ -48,6 +48,7 @@ ZDSZILOGLIBDIR		:= $(ZDSINSTALLDIR)/lib/zilog
 # These are the same directories but with the directory separator
 # character swapped as needed by the ZDS-II compiler
 
+WINTOOL			:= y
 WTOPDIR 		:= ${shell cygpath -w $(TOPDIR)}
 WZDSSTDINCDIR		:= ${shell cygpath -w $(ZDSSTDINCDIR)}
 WZDSZILOGINCDIR 	:= ${shell cygpath -w $(ZDSZILOGINCDIR)}
